# Second_semester

Lab_1/: !CMakeLists.txt  AnimatedText.cpp  AnimatedText.hpp  CMakeLists.txt  main.cpp
Lab_1/SFML/: AnimationEngine.cpp  AnimationEngine.hpp
Lab_2/: CMakeLists.txt  main.cpp
Lab_2/CustomString/: CustomString.cpp  CustomString.hpp
Lab_3/: CMakeLists.txt  README.md  main.cpp
Lab_3/Complex/: ComplexNumber.cpp  ComplexNumber.hpp
Lab_4/: CMakeLists.txt  README.md  main.cpp
Lab_4/Matrix/: Matrix.hpp
Lab_5/: CMakeLists.txt  README.md  main.cpp
Lab_5/BoolVector/: BoolVector.hpp
Lab_6/: CMakeLists.txt  README.md  log.txt  main.cpp
Lab_6/CustomLogger/: Logger.cpp  Logger.hpp
Lab_7/: CMakeLists.txt  README.md  main.cpp
Lab_7/Shapes/: Circle.cpp  Circle.hpp  Rectangle.cpp  Rectangle.hpp  Shape.hpp  Triangle.cpp  Triangle.hpp
Lab_8/: CMakeLists.txt  README.md  main.cpp
Lab_8/Stack/: Stack.hpp  VectorStack.hpp
Practice 1/: CMakeLists.txt  Encryption.cpp  Encryption.hpp  main.cpp
Practice_2/: CMakeLists.txt  main.cpp  readme.md
Practice_3/: !CMakeLists.txt  CMakeLists.txt  MegaOriginalKinematicSolver.hpp  README.md  main.cpp
Practice_3/AnimationEngine/: AnimationEngine.hpp
Practice_3/KinematicSolver/: KinematicSolver.cpp  KinematicSolver.hpp
Practice_4/: CMakeLists.txt  README.md  blocks.txt  main.cpp
Practice_4/Blocks/: Blocks.hpp
Test/: CMakeLists.txt  block.cpp  block.hpp  main.cpp
